# powerplant-coding-challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  test_api.py
app/schemas/: payload.py
domain/models/: __init__.py  fuel.py  power_output.py  powerplant.py
domain/services/: __init__.py  production_plan.py  test_service.py
