[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "Powerplant API"
authors = ["Luis Esteban Rodriguez <rodriguezjluis0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "uvicorn app.main:app --host 0.0.0.0 --port 8888"
